Add message translate: Categories and Tags.

--- a/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
+++ b/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
@@ -184,3 +184,9 @@ msgstr "Sair"
 
 msgid "Welcome"
 msgstr "Bem vindo"
+
+msgid "Tags"
+msgstr "Marcadores"
+
+msgid "Categories"
+msgstr "Categorias"
