Add custom columns to entity question: approved (by moderation) and email has sent (to validate emails has sent).

--- a/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
+++ b/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
@@ -193,3 +193,9 @@ msgstr "Categorias"
 
 msgid "Send Mail"
 msgstr "Enviar Email"
+
+msgid "Email has sent"
+msgstr "Email foi enviado"
+
+msgid "Approved"
+msgstr "Aprovado"
