--- a/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
+++ b/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
@@ -174,6 +174,10 @@ msgstr "Resposta"
 msgid "Google Groups ID"
 msgstr "Google Groups ID"
 
+#: /var/www/zcpe/src/Cekurte/ZCPEBundle/Controller/QuestionController.php:211
+msgid "Google Groups Author"
+msgstr "Google Groups Autor"
+
 #: /var/www/zcpe/src/Cekurte/ZCPEBundle/Controller/QuestionController.php:213
 msgid "Difficulty"
 msgstr "Dificuldade"
@@ -211,6 +215,9 @@ msgstr "Email foi enviado"
 
 msgid "Approved"
 msgstr "Aprovado"
+
+msgid "Imported from Google Groups"
+msgstr "Importado do Google Groups"
 
 msgid "Preview"
 msgstr "Pré-visualização"
