Add field "revised" to question entity and show the value on details of the question page.

--- a/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
+++ b/src/Cekurte/ZCPEBundle/Resources/translations/messages.pt_BR.po
@@ -219,6 +219,9 @@ msgstr "Aprovado"
 msgid "Imported from Google Groups"
 msgstr "Importado do Google Groups"
 
+msgid "Revised"
+msgstr "Revisado"
+
 msgid "Preview"
 msgstr "Pré-visualização"
 
